# chpatterns

./: .clangd  .gitignore  CMakeLists.txt  LogFlags.hxx  README.md  VersionInfo.h.in  build.sh  chpatterns.cxx  types.h  utils.cxx  utils.hxx
resources/: patterndb_exported.csv
